--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ events {
 
 http {
     server {
-        listen 80;
+        listen 8080;
         server_name localhost;
 
         location = / {
@@ -23,6 +23,9 @@ http {
         }
 
         location /static {
+            auth_request /auth_verify;
+            error_page 401 = /login;
+            error_page 403 = /unauthorized;
             proxy_pass http://localhost:8501/static;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -35,7 +38,25 @@ http {
         }
 
         location /_stcore {
+            auth_request /auth_verify;
+            error_page 401 = /login;
+            error_page 403 = /unauthorized;
             proxy_pass http://localhost:8501/_stcore;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_read_timeout 86400;
+        }
+
+        location /component {
+            auth_request /auth_verify;
+            error_page 401 = /login;
+            error_page 403 = /unauthorized;
+            proxy_pass http://localhost:8501/component;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
